[package]
name = "sophia-test"
version = "0.1.0"
authors = ["Thomas Bourg <tbourg07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
"sophia" = { git = "https://github.com/tbourg/sophia_rs"}
bimap = "0.4.0"
bit-matrix = "0.1.0"