[package]
name = "inferrust"
version = "0.1.0"
authors = ["Thomas Bourg <tbourg07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"sophia" = { git = "https://github.com/tbourg/sophia_rs"}
bimap = "0.4.0"
rayon = "*"

[dev-dependencies]
criterion = "0.3"
time = "0.1.4"
clap = "~2.33.0"

[[bench]]
name = "inferrust"
harness = false