[package]
name = "inferrust"
version = "0.1.0"
authors = ["Thomas Bourg <tbourg07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia = { git = "https://github.com/pchampin/sophia_rs", tag = "v0.5.0"}
rayon = "*"
time = "0.1.4"
itertools = "*"
once_cell = "1.3.1"
flamer = "*"
flame = "*"

[dev-dependencies]
criterion = "0.3"
clap = "~2.33.0"
rand = "*"

[[bench]]
name = "inferrust"
harness = false